feat: agg metodo para calculo de tratador
